--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@
 #
 title                     : Ari Glamslam
 theme                     : hugo-skelett
-baseURL                   : ''
+baseURL                   : 'https://phlow.github.io/ari-glamslam/'
 languageCode              : de-DE
 defaultContentLanguage    : de
 copyright                 : 
